// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`certify and submit component changes rendering when an APD is withdrawn and then modified 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CertifyAndSubmit
    dirty={false}
    pushRoute={[Function]}
    state="Arizona"
    status="submitted"
    submitAPD={[Function]}
    withdrawApd={[Function]}
    year="1066"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Subsection
        id="certify-submit-submit"
        nested={false}
        open={false}
        resource="certifyAndSubmit.certify"
      >
        <AlreadySubmitted
          dashboard={[Function]}
          state="Arizona"
          year="1066"
        />
        <Withdraw
          dirty={false}
          status="submitted"
          withdrawApd={[Function]}
        />
      </Subsection>,
      "id": "certify-submit",
      "resource": "certifyAndSubmit",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          <AlreadySubmitted
            dashboard={[Function]}
            state="Arizona"
            year="1066"
          />,
          <Withdraw
            dirty={false}
            status="submitted"
            withdrawApd={[Function]}
          />,
        ],
        "id": "certify-submit-submit",
        "nested": false,
        "open": false,
        "resource": "certifyAndSubmit.certify",
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "dashboard": [Function],
            "state": "Arizona",
            "year": "1066",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "dirty": false,
            "status": "submitted",
            "withdrawApd": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Subsection
          id="certify-submit-submit"
          nested={false}
          open={false}
          resource="certifyAndSubmit.certify"
        >
          <AlreadySubmitted
            dashboard={[Function]}
            state="Arizona"
            year="1066"
          />
          <Withdraw
            dirty={false}
            status="submitted"
            withdrawApd={[Function]}
          />
        </Subsection>,
        "id": "certify-submit",
        "resource": "certifyAndSubmit",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            false,
            <AlreadySubmitted
              dashboard={[Function]}
              state="Arizona"
              year="1066"
            />,
            <Withdraw
              dirty={false}
              status="submitted"
              withdrawApd={[Function]}
            />,
          ],
          "id": "certify-submit-submit",
          "nested": false,
          "open": false,
          "resource": "certifyAndSubmit.certify",
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "dashboard": [Function],
              "state": "Arizona",
              "year": "1066",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "dirty": false,
              "status": "submitted",
              "withdrawApd": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`certify and submit component changes rendering when an APD is withdrawn and then modified 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CertifyAndSubmit
    dirty={true}
    pushRoute={[Function]}
    state="Arizona"
    status="draft"
    submitAPD={[Function]}
    withdrawApd={[Function]}
    year="1066"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Subsection
        id="certify-submit-submit"
        nested={false}
        open={false}
        resource="certifyAndSubmit.certify"
      >
        <Submit
          submitAPD={[Function]}
        />
      </Subsection>,
      "id": "certify-submit",
      "resource": "certifyAndSubmit",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Submit
            submitAPD={[Function]}
          />,
          false,
          false,
        ],
        "id": "certify-submit-submit",
        "nested": false,
        "open": false,
        "resource": "certifyAndSubmit.certify",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "submitAPD": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        false,
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Subsection
          id="certify-submit-submit"
          nested={false}
          open={false}
          resource="certifyAndSubmit.certify"
        >
          <Submit
            submitAPD={[Function]}
          />
        </Subsection>,
        "id": "certify-submit",
        "resource": "certifyAndSubmit",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Submit
              submitAPD={[Function]}
            />,
            false,
            false,
          ],
          "id": "certify-submit-submit",
          "nested": false,
          "open": false,
          "resource": "certifyAndSubmit.certify",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "submitAPD": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          false,
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`certify and submit component renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CertifyAndSubmit
    dirty={false}
    pushRoute={[Function]}
    state="Arizona"
    status="draft"
    submitAPD={[Function]}
    withdrawApd={[Function]}
    year="1066"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Subsection
        id="certify-submit-submit"
        nested={false}
        open={false}
        resource="certifyAndSubmit.certify"
      >
        <Submit
          submitAPD={[Function]}
        />
      </Subsection>,
      "id": "certify-submit",
      "resource": "certifyAndSubmit",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Submit
            submitAPD={[Function]}
          />,
          false,
          false,
        ],
        "id": "certify-submit-submit",
        "nested": false,
        "open": false,
        "resource": "certifyAndSubmit.certify",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "submitAPD": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        false,
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Subsection
          id="certify-submit-submit"
          nested={false}
          open={false}
          resource="certifyAndSubmit.certify"
        >
          <Submit
            submitAPD={[Function]}
          />
        </Subsection>,
        "id": "certify-submit",
        "resource": "certifyAndSubmit",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Submit
              submitAPD={[Function]}
            />,
            false,
            false,
          ],
          "id": "certify-submit-submit",
          "nested": false,
          "open": false,
          "resource": "certifyAndSubmit.certify",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "submitAPD": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          false,
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`certify and submit component renders correctly 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CertifyAndSubmit
    dirty={false}
    pushRoute={[Function]}
    state="Arizona"
    status="submitted"
    submitAPD={[Function]}
    withdrawApd={[Function]}
    year="1066"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Subsection
        id="certify-submit-submit"
        nested={false}
        open={false}
        resource="certifyAndSubmit.certify"
      >
        <AlreadySubmitted
          dashboard={[Function]}
          state="Arizona"
          year="1066"
        />
        <Withdraw
          dirty={false}
          status="submitted"
          withdrawApd={[Function]}
        />
      </Subsection>,
      "id": "certify-submit",
      "resource": "certifyAndSubmit",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          <AlreadySubmitted
            dashboard={[Function]}
            state="Arizona"
            year="1066"
          />,
          <Withdraw
            dirty={false}
            status="submitted"
            withdrawApd={[Function]}
          />,
        ],
        "id": "certify-submit-submit",
        "nested": false,
        "open": false,
        "resource": "certifyAndSubmit.certify",
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "dashboard": [Function],
            "state": "Arizona",
            "year": "1066",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "dirty": false,
            "status": "submitted",
            "withdrawApd": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Subsection
          id="certify-submit-submit"
          nested={false}
          open={false}
          resource="certifyAndSubmit.certify"
        >
          <AlreadySubmitted
            dashboard={[Function]}
            state="Arizona"
            year="1066"
          />
          <Withdraw
            dirty={false}
            status="submitted"
            withdrawApd={[Function]}
          />
        </Subsection>,
        "id": "certify-submit",
        "resource": "certifyAndSubmit",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            false,
            <AlreadySubmitted
              dashboard={[Function]}
              state="Arizona"
              year="1066"
            />,
            <Withdraw
              dirty={false}
              status="submitted"
              withdrawApd={[Function]}
            />,
          ],
          "id": "certify-submit-submit",
          "nested": false,
          "open": false,
          "resource": "certifyAndSubmit.certify",
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "dashboard": [Function],
              "state": "Arizona",
              "year": "1066",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "dirty": false,
              "status": "submitted",
              "withdrawApd": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
